--- a/package.json
+++ b/package.json
@@ -6,32 +6,31 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compile": "npx solc --bin --abi contracts/bbg.sol -o contracts/build",
+    "deploy": "node scripts/deploy.js",
+    "create-token": "node scripts/createToken.js",
+    "setup-contract": "npm run compile && npm run deploy && npm run create-token",
+    "test-mint": "node scripts/testMint.js"
   },
   "devDependencies": {
     "@types/three": "^0.180.0",
+    "solc": "^0.8.30",
     "three-stdlib": "^2.36.0",
     "typescript": "~5.9.3",
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "@civic/auth": "^0.9.5",
-    "@civic/auth-web3": "^0.7.2",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@hashgraph/hedera-wallet-connect": "^2.0.3",
     "@hashgraph/sdk": "^2.75.0",
-    "@honeycomb-protocol/edge-client": "^0.0.7-beta.15",
-    "@metaplex-foundation/umi": "^1.2.0",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
-    "@solana/web3.js": "^1.98.2",
-    "@verxioprotocol/core": "^0.1.3",
     "assert-browserify": "^2.0.0",
     "axios": "^1.10.0",
     "base58": "^2.0.1",
     "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
+    "dotenv": "^16.0.0",
     "gsap": "^3.13.0",
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
