--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@hashgraph/hedera-wallet-connect": "^2.0.3",
+    "@hashgraph/hedera-wallet-connect": "^1.4.0",
+    "@hashgraph/proto": "^2.24.0",
     "@hashgraph/sdk": "^2.75.0",
+    "@reown/appkit": "^1.8.13",
+    "@walletconnect/modal": "^2.7.0",
     "assert-browserify": "^2.0.0",
     "axios": "^1.10.0",
     "base58": "^2.0.1",
@@ -35,6 +38,7 @@
     "https-browserify": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "process": "^0.11.10",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "rollup-plugin-node-polyfills": "^0.2.1",
